frontend/src/components/self-driving-cars-main/index.css
.main-block {
    --color-black: #000;
    --color-white: #fff;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    position: relative;

    &__top {
        height: 878px;
        position: relative;
    }

    &__top-text {
        font-weight: 400;
        font-size: 47px;
        position: absolute;
        left: 16px;
        top: 33px;
        padding: 17px 30px;
        border: 1px solid var(--color-black);
        border-radius: 23px;
    }

    &__bottom {
        height: 888px;
        position: relative;
        overflow: hidden;
    }

    &__bottom-play {
        position: absolute;
        top: 20px;
        left: 27px;
        z-index: 6;

        &:hover {
            cursor: pointer;
        }
    }

    &__info-top {
        font-size: 27px;
        line-height: 30px;
        max-width: 330px;
        position: absolute;
        bottom: -298px;
        right: 0;
        z-index: 5;
        color: var(--color-black);
        padding: 0 30px 0 16px;
    }

    &__info-bottom {
        color: var(--color-white);
    }

    &__image {
        position: absolute;
        right: 0;
    }

    @media screen and (min-width: 1400px) {

        &__top,
        &__bottom {
            height: auto;
        }

        &__image {
            position: static;
            width: 100%;
        }

        &__info-top {
            font-size: 47px;
            max-width: 1095px;
            line-height: 48px;
            bottom: -192px;
            right: 20px;
            margin: 0 114px 0 auto;
            padding-left: 20px;
        }
    }
}

